# thinga

./: README.md  pyproject.toml  ruff.toml
scripts/: image_collector.py  upload_collected_images.sh
thinga/: .env.example  config.py  crud.py  database.py  dependencies.py  enums.py  main.py  models.py  schemas.py  utils.py
thinga/routers/: image_comparison.py  ranking_system.py  user_management.py
thinga/tests/: conftest.py  test_apis.py
