[project]
name = "thinga"
version = "0.2.1"
description = "Rate things."
authors = ["Artin Mohammadi <sheikhartin@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/sheikhartin/thinga"
keywords = ["rating", "comparison", "to-compare"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Framework :: FastAPI",
    "Intended Audience :: End Users/Desktop",
]
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=24.1.0",
    "aiohttp>=3.10.10",
    "bcrypt>=4.2.0",
    "fastapi>=0.115.2",
    "playwright>=1.48.0",
    "psycopg2-binary>=2.9.9",
    "pydantic[email]>=2.9.2",
    "python-dotenv>=1.0.1",
    "python-multipart>=0.0.12",
]
